--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,7 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.6.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.firebase:firebase-auth:21.0.4'
     implementation platform ('com.google.firebase:firebase-bom:30.0.1')
     implementation 'com.google.firebase:firebase-database:20.0.5'
@@ -65,8 +65,11 @@ dependencies {
     implementation 'com.hbb20:ccp:2.5.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
-    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
 
+
+    //Zoom ImageView
+    implementation 'com.jsibbold:zoomage:1.3.1'
 
 
 
