--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MessangerTest"
         tools:targetApi="31">
+        <activity
+            android:name=".view.display.ViewImageActivity"
+            android:exported="false" />
         <activity android:name=".view.profile.ProfileActivity" />
         <activity
             android:name=".view.settings.SettingsActivity"
