--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,12 @@
         android:theme="@style/Theme.MessangerTest"
         tools:targetApi="31">
         <activity
+            android:name=".view.chats.ChatsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.contact.ContactsActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.display.ViewImageActivity"
             android:exported="false" />
         <activity android:name=".view.profile.ProfileActivity" />
